--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,23 @@
+# Terraform
 .terraform/
+*.tfstate
+*.tfstate.backup
+crash.log
+*.tfvars
+override.tf
+override.tf.json
+terraform.tfvars.json
+
+# macOS
+.DS_Store
+
+# Jupyter/IPython
+.ipynb_checkpoints/
+
+# Python virtual environments
+.venv/
+__pycache__/
+*.pyc
+
+# VS Code
+.vscode/
